# Socrates-cli

./: .gitignore  LIBRARY_INTEGRATIONS_CLI_REFERENCE.md  README.md  pyproject.toml
.github/workflows/: test-and-build.yml  tests.yml
docs/: LIBRARY_GUIDE.md
src/socrates_cli/: __init__.py  __main__.py  cli.py  commands.py
src/socrates_cli/commands/: __init__.py  analytics_commands.py  code_commands.py  collab_commands.py  conv_commands.py  debug_commands.py  doc_commands.py  file_commands.py  finalize_commands.py  github_commands.py  knowledge_commands.py  llm_commands.py  maturity_commands.py  model_commands.py  note_commands.py  project_commands.py  query_commands.py  session_commands.py  skills_commands.py  stats_commands.py  subscription_commands.py  system_commands.py  user_commands.py  workflow_commands.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py
